# summarizer

./: README.md  inner_voice.py  pyproject.toml  summarize.py
