[tool.poetry]
name = "summarybot"
version = "0.1.0"
description = ""
authors = ["Mathijs de Bruin <mathijs@mathijsfietst.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
langchain = "^0.1.5"
langchain-community = "^0.0.17"
unstructured = {extras = ["markdown", "pdf"], version = "^0.12.3"}
langchain-openai = "^0.0.3"
gpt4all = "^2.1.0"
transformers = "^4.36.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
